invalid_label_sym_sym_arg_keywords_test/invalid_label_sym_sym_arg_keywords_test_6.src
.IPPcode24
JUMPIFEQ label2 int GF@b